# nice123d

./: README.md  cadviewer.py  main.py  my_python_script.py  pyproject.toml  reinstall_venv.ps1  settings.yaml  setup.md
models/: a.py  basic.py  basic_model.py  sphere.py
nice123d/: __init__.py  code_editor.py  constants.py  main_pages.py  ocp_viewer.py
nicegui-cadviewer/: __main__.py  app_logging.py  code_editor.py  function_drawer.py  main_pages.py  main_window.py  project_gallery.py
tests/: editor.yaml  git_integration.py  move_view.py  ocp_vscode.yaml  page_layout.py  parameter.yaml  parameter_test.py  settings.yaml  settings_test.py  tab_special.py  upload.py
